fixing scrollbar issue in view tabs

--- a/webui/bridge/teams/teams.css
+++ b/webui/bridge/teams/teams.css
@@ -30,7 +30,7 @@
 	color: #ffffff;
 	cursor: pointer;
 	vertical-align: top;
-	overflow-x: scroll;
+	overflow-x: hidden;
     white-space: nowrap;
 }
 
